# global-illumination

./: OpenGL代码讲解.markdown  README.md  从辐射度量到全局光照：光线的真实感渲染.pptx  全局光照的代码实现细节.pptx
GI/: CMakeLists.txt
GI/include/: camera.h  display.h  geometry.h  render.h  scene.h  utils.h
GI/include/glad/: glad.h
GI/src/: camera.cpp  display.cpp  geometry.cpp  glad.c  main.cpp  render.cpp  scene.cpp  utils.cpp
SmallptGPU-v1.6/: Makefile  RUN_SCENE_CORNELL_32SIZE.bat  RUN_SCENE_CORNELL_64SIZE.bat  RUN_SCENE_CORNELL_64SIZE_DL.bat  RUN_SCENE_SIMPLE_64SIZE.bat  camera.h  displayfunc.h  geom.h  scene.h
global-illumination/: RUN_SCENE_CORNELL_128SIZE.bat  displayfunc.c  geomfunc.h  image.ppm  smallptCPU.c  smallptGPU.c  vec.h
